packages/toolkit/components/breadcrumb/_breadcrumb.scss
/* ==========================================================================
    COMPONENTS / #BREADCRUMB
   ========================================================================== */

/**
 * 1. Hide the breadcrumb on print stylesheets.
 * 2. Don't show the full breadcrumb below tablet size.
 * 3. Typography sizing mixin, see core/tools/_typography
 * 4. and core/settings/_typography for size maps.
 * 5. .. but show a single back link.
 */

.ofh-breadcrumb {
  @include print-hide();

  padding-bottom: $ofh-size-12;
  padding-top: $ofh-size-12;

  .ofh-breadcrumb__separator {
    color: $ofh-color-greyscale-2;
    fill: $ofh-color-greyscale-2;
    flex: 0 0 auto;
    height: $ofh-size-16;
    width: $ofh-size-16;
  }

  .ofh-breadcrumb__back-icon {
    color: $ofh-color-greyscale-2;
    fill: $ofh-color-greyscale-2;
    flex: 0 0 auto;
    height: $ofh-size-16;
    width: $ofh-size-16;
  }
}

.ofh-breadcrumb__list {
  align-items: center;
  column-gap: $ofh-size-8;
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  margin: 0;
  padding: 0;

  @include mq($until: tablet) {
    display: none; /* [2] */
  }
}

.ofh-breadcrumb__item {
  @include ofh-font('paragraph-sm'); /* [3] */

  align-items: center;
  column-gap: $ofh-size-8;
  display: flex;
  margin-bottom: 0;
  white-space: nowrap;
}

.ofh-breadcrumb__link {
  color: $ofh-color-foreground-breadcrumb-default;
  white-space: nowrap;

  &:visited {
    color: $ofh-color-foreground-breadcrumb-visited;

    &:hover {
      color: $ofh-color-foreground-breadcrumb-hover;
    }
  }

  &:focus {
    &:hover {
      color: $ofh-color-foreground-breadcrumb-hover;
    }
  }

  &:active {
    color: $ofh-color-foreground-breadcrumb-active;
  }
}

.ofh-breadcrumb__back {
  @include ofh-font('paragraph-sm'); /* [3] */

  margin: 0;

  @include mq($from: tablet) {
    display: none; /* [5] */
  }
}

.ofh-breadcrumb__backlink {
  align-items: center;
  color: $ofh-color-foreground-breadcrumb-default;
  column-gap: $ofh-size-8;
  display: inline-flex;
  white-space: nowrap;

  &:visited {
    color: $ofh-color-foreground-breadcrumb-visited;

    &:hover {
      color: $ofh-color-foreground-breadcrumb-hover;
    }
  }

  &:focus {
    &:hover {
      color: $ofh-color-foreground-breadcrumb-hover;
    }
  }

  &:active {
    color: $ofh-color-foreground-breadcrumb-active;
  }
}

